[FIX] code highlight working perfect, resolved textarea whitespace problem

--- a/public/stylesheets/sass/admin.sass
+++ b/public/stylesheets/sass/admin.sass
@@ -90,7 +90,7 @@ ul#header-menu
     padding-bottom: 2px
   input,
   textarea
-    width: 70%
+    width: 90%
     padding: 2px
   input[type="submit"]
     margin-top: 5px
