--- a/public/stylesheets/sass/master.sass
+++ b/public/stylesheets/sass/master.sass
@@ -3,7 +3,7 @@
   padding: 0
 
 body
-  font-size: 62.5%
+  font-size: 69%
   background: #fff
 
 p,  li
